solved mobile navbar and overflow-x problem

--- a/frontend/my-project/src/index.css
+++ b/frontend/my-project/src/index.css
@@ -2,6 +2,12 @@
 @import "leaflet/dist/leaflet.css";
 
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
+}
 
 
 /* ---------------- Animations ---------------- */
